Bug 82719 - EDITING: String with hyperlink not pasted
Summary: EDITING: String with hyperlink not pasted
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.5.0 target:4.4.1
Keywords: bibisected, bisected, regression
: 88987 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-08-17 06:54 UTC by Bugcruncher
Modified: 2015-12-17 08:30 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
sample document (47.91 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-08-17 06:54 UTC, Bugcruncher
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bugcruncher 2014-08-17 06:54:16 UTC
Created attachment 104751 [details]
sample document

Problem description: 
It is impossible to copy / paste a string with hyperlink what is part of a longer string in cell. 

Steps to reproduce with attached sample document:

Somtehing what will work fine
1. "doubleclick on white area in cell C5:
   » Edit mode, caret right from string "cccc"
2. <ctrl+a>, complete string is selected
3. <ctrl+c> for copy
4. Click cell G5
5. "<ctrl+v> for paste
   » "cccc" appears in cell G5"
	
Problem:
11. doubleclick on white area in cell C3:
    » Edit mode, Caret right from string "cccc"
12. <ctrl+a>, complete string is selected
13. <ctrl+c> for copy
14. Click cell G3
15. "<ctrl+v> for paste
    Bug: nothing appears in cell G3"

If I paste to an empty new writer document (in step 15) "ccc" will appear, so I assume that the problem appears in paste, not in copy.

              
Operating System: Windows 7
Version: 4.4.0.0.alpha0+ Master
Last worked in: 4.2.5.2 release
Comment 1 sophie 2014-08-18 14:25:45 UTC
Hi, reproduce using your document and my own in Version: 4.4.0.0.alpha0+
Build ID: e379401618268ed7f7f5885a36b90e1f4f6cd4af
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-08-18_05:51:03

It works well in 4.3.0.4 and Version: 4.3.1.1
Build ID: c4b15cd4d00dec6b266fa830b4ba73e31ae6ce73 - mark as New - Sophie
Comment 2 Michael Weghorn (away) 2014-12-09 22:56:02 UTC
bibisect result:
 afdb28caf97495cd3696588a4ee78647745ed6e7 is the first bad commit
commit afdb28caf97495cd3696588a4ee78647745ed6e7
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Sat Oct 18 06:47:56 2014 +0000

    source-hash-0d55277947fbc2f92fb9fe40dcfa804dc619c37a
    
    commit 0d55277947fbc2f92fb9fe40dcfa804dc619c37a
    Author:     Tomaž Vajngerl <tomaz.vajngerl@collabora.com>
    AuthorDate: Sun Jun 29 20:15:50 2014 +0200
    Commit:     Tomaž Vajngerl <tomaz.vajngerl@collabora.com>
    CommitDate: Tue Jul 1 09:11:33 2014 +0200
    
        LODroid: cleanup
    
        Change-Id: I3c2b156c6ed5c6a27ac845481150150812eef1ec

---------

$ git bisect log
# bad: [0777cd085a7633a48e03d25948cc67fce87b7ac7] source-hash-b800d0b6ad74ce4a9adb23b865dd174d1eefa47b
# good: [812c4a492375ac47b3557fbb32f5637fc89d60d9] source-hash-dea4a3b9d7182700abeb4dc756a24a9e8dea8474
git bisect start 'latest' 'oldest'
# bad: [8677ba6e74a774fb44ec7831f14e53d8663f59ed] source-hash-eb213e490d9a366477b921d1a408d85c4638499e
git bisect bad 8677ba6e74a774fb44ec7831f14e53d8663f59ed
# bad: [42455e7bcd46db5523f7f8e1931bbd0bd4b51cfc] source-hash-b5608fd429790a3d1153341b2c86303b7090b15a
git bisect bad 42455e7bcd46db5523f7f8e1931bbd0bd4b51cfc
# good: [253e662b25e57508dbc46753f0f28af36d5f4e25] source-hash-f7d51f43deda5e28df63f1b8e168e84838d0d0b4
git bisect good 253e662b25e57508dbc46753f0f28af36d5f4e25
# good: [8461c942c2060278f64283368705e0183709c4d7] source-hash-c7d390bf21623c148ff5c3955561b903d9581da8
git bisect good 8461c942c2060278f64283368705e0183709c4d7
# good: [14dd07abf36b67545552130557c06b3ae1855ff0] source-hash-67c20d42b5ca06458b154356877f4ad5952736f4
git bisect good 14dd07abf36b67545552130557c06b3ae1855ff0
# bad: [db39c7aad664b60c46f31289f79b3b58b0800a1d] source-hash-a7e1ffc248bed431693c6d50c02e7c936c67f360
git bisect bad db39c7aad664b60c46f31289f79b3b58b0800a1d
# bad: [afdb28caf97495cd3696588a4ee78647745ed6e7] source-hash-0d55277947fbc2f92fb9fe40dcfa804dc619c37a
git bisect bad afdb28caf97495cd3696588a4ee78647745ed6e7
# good: [30a457695d2ddf0d72df627a1ab6afae53053344] source-hash-f90eb33a268bdcd1c52aea5670a58267b0907096
git bisect good 30a457695d2ddf0d72df627a1ab6afae53053344
# first bad commit: [afdb28caf97495cd3696588a4ee78647745ed6e7] source-hash-0d55277947fbc2f92fb9fe40dcfa804dc619c37a
Comment 3 Matthew Francis 2015-01-01 08:58:03 UTC
The below commit appears to be where the behaviour changed.

Adding Cc: to matteo.campanelli@gmail.com. Any chance you could have a look at this? Thanks


commit 139ca8f26419d4b3e4f478ef8ff7536176c54f1c
Author: matteocam <matteo.campanelli@gmail.com>
Date:   Sat May 31 01:09:50 2014 -0400

    Added EE_CHAR_BKGCOLOR
    
    Change-Id: If11271f4b3b8f9ab67961206856938046ea2a416
    (cherry picked from commit c2580813426a58cd2ab22efacec9d28423201562)
Comment 4 Commit Notification 2015-02-12 11:08:22 UTC
Henry Castro committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5a646f04cc40fb13f39b16ab452237e5cf324684

fdo#82719  EDITING: String with hyperlink not pasted

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-02-12 11:15:13 UTC
Henry Castro committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=39c9223b933f8585ed5d1a4014596aa8d4c94db3&h=libreoffice-4-4

fdo#82719  EDITING: String with hyperlink not pasted

It will be available in 4.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-02-12 17:46:02 UTC
Henry Castro committed a patch related to this issue.
It has been pushed to "libreoffice-4-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9b609d324883c4aaf5291cb6e9414795274290f9&h=libreoffice-4-4-1

fdo#82719  EDITING: String with hyperlink not pasted

It will be available in 4.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Katarina Behrens 2015-03-03 15:23:48 UTC
*** Bug 88987 has been marked as a duplicate of this bug. ***
Comment 8 Robinson Tryon (qubit) 2015-12-17 08:30:11 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]