fdo#82719  EDITING: String with hyperlink not pasted

Fixed. It is impossible to copy / paste a string with hyperlink what is part of a longer string in cell.

Change-Id: Id97ef7d742ab8ca17e2cafdc449d04d5839e93d4